# m-dfp

./: README.md  pyproject.toml  setup.py
src/examples/: example.py
src/microchip_dfp/: __init__.py  atdf.py  device.py  peripheral.py  pinout.py  variant.py
