[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["microchip_dfp"]

[project]
name = "microchip_dfp"
version = "0.0.1"
authors = [
  { name="Coburn Wightman", email="author@example.com" },
]
description = "Simple library to parse the xml of Microchip Device Family Packs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/coburnw/m-dfp"
